[gd_scene load_steps=29 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://materials/walls.tres" type="Material" id=2]
[ext_resource path="res://scripts/walls.gd" type="Script" id=3]
[ext_resource path="res://scripts/snake.gd" type="Script" id=4]
[ext_resource path="res://scripts/rocks_and_oranges.gd" type="Script" id=5]
[ext_resource path="res://meshlib.tres" type="MeshLibrary" id=6]
[ext_resource path="res://scripts/gridmap.gd" type="Script" id=7]
[ext_resource path="res://scripts/camera.gd" type="Script" id=8]
[ext_resource path="res://scripts/touch_interface.gd" type="Script" id=9]
[ext_resource path="res://scripts/keyboard_interface.gd" type="Script" id=10]
[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=11]
[ext_resource path="res://buttons/ubuntu.tres" type="DynamicFont" id=12]
[ext_resource path="res://buttons/button_base.tscn" type="PackedScene" id=13]
[ext_resource path="res://buttons/pause.png" type="Texture" id=14]
[ext_resource path="res://buttons/restart.png" type="Texture" id=15]
[ext_resource path="res://buttons/playmenu.png" type="Texture" id=16]
[ext_resource path="res://buttons/quit.png" type="Texture" id=17]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=18]
[ext_resource path="res://buttons/easy_difficulty.png" type="Texture" id=19]
[ext_resource path="res://buttons/medium_difficulty.png" type="Texture" id=20]
[ext_resource path="res://buttons/hard_difficulty.png" type="Texture" id=21]
[ext_resource path="res://buttons/small_size.png" type="Texture" id=22]
[ext_resource path="res://buttons/medium_size.png" type="Texture" id=23]
[ext_resource path="res://buttons/large_size.png" type="Texture" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 180 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 320, 180 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 160, 360 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 160, 300 )

[node name="game" type="Node"]
script = ExtResource( 1 )

[node name="world" type="Spatial" parent="."]

[node name="walls" type="ImmediateGeometry" parent="world"]
material_override = ExtResource( 2 )
script = ExtResource( 3 )

[node name="snake" type="Node" parent="world"]
script = ExtResource( 4 )

[node name="update_timer" type="Timer" parent="world/snake"]
process_mode = 0

[node name="rocks_and_oranges" type="Node" parent="world"]
script = ExtResource( 5 )

[node name="gridmap" type="GridMap" parent="world"]
mesh_library = ExtResource( 6 )
cell_size = Vector3( 1, 1, 1 )
data = {
"cells": PoolIntArray(  )
}
script = ExtResource( 7 )
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="camera_pivot" type="Spatial" parent="world"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
script = ExtResource( 8 )

[node name="camera_node" type="Camera" parent="world/camera_pivot"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 4 )
current = true

[node name="interface" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 0

[node name="touch_interface" type="Node2D" parent="interface"]
pause_mode = 1
editor/display_folded = true
script = ExtResource( 9 )

[node name="up" type="TouchScreenButton" parent="interface/touch_interface"]
position = Vector2( 640, 180 )
shape = SubResource( 1 )

[node name="down" type="TouchScreenButton" parent="interface/touch_interface"]
position = Vector2( 640, 540 )
shape = SubResource( 2 )

[node name="left" type="TouchScreenButton" parent="interface/touch_interface"]
position = Vector2( 160, 360 )
shape = SubResource( 3 )

[node name="right" type="TouchScreenButton" parent="interface/touch_interface"]
position = Vector2( 1120, 420 )
shape = SubResource( 4 )

[node name="keyboard_interface" type="Node" parent="interface"]
script = ExtResource( 10 )

[node name="pause_menu" type="Control" parent="interface"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="darkener" type="ColorRect" parent="interface/pause_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="center" type="CenterContainer" parent="interface/pause_menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="label" type="Label" parent="interface/pause_menu/center"]
margin_left = 640.0
margin_top = 323.0
margin_right = 640.0
margin_bottom = 396.0
custom_fonts/font = ExtResource( 12 )

[node name="margin" type="MarginContainer" parent="interface/pause_menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -315.0
margin_bottom = 90.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30

[node name="separator" type="HBoxContainer" parent="interface/pause_menu/margin"]
margin_top = 30.0
margin_right = 285.0
margin_bottom = 90.0
custom_constants/separation = 15
alignment = 2

[node name="pause" parent="interface/pause_menu/margin/separator" instance=ExtResource( 13 )]
margin_right = 60.0
margin_bottom = 60.0
icon = ExtResource( 14 )

[node name="restart" parent="interface/pause_menu/margin/separator" instance=ExtResource( 13 )]
margin_left = 75.0
margin_right = 135.0
margin_bottom = 60.0
icon = ExtResource( 15 )

[node name="playmenu" parent="interface/pause_menu/margin/separator" instance=ExtResource( 13 )]
margin_left = 150.0
margin_right = 210.0
margin_bottom = 60.0
icon = ExtResource( 16 )

[node name="quit" parent="interface/pause_menu/margin/separator" instance=ExtResource( 13 )]
margin_left = 225.0
margin_right = 285.0
margin_bottom = 60.0
icon = ExtResource( 17 )

[node name="main_menu" type="CenterContainer" parent="interface"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 18 )

[node name="grid" type="GridContainer" parent="interface/main_menu"]
margin_left = 320.0
margin_top = 155.0
margin_right = 960.0
margin_bottom = 565.0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 3

[node name="easy_difficulty" parent="interface/main_menu/grid" instance=ExtResource( 13 )]
margin_right = 180.0
margin_bottom = 180.0
icon = ExtResource( 19 )

[node name="medium_difficulty" parent="interface/main_menu/grid" instance=ExtResource( 13 )]
margin_left = 230.0
margin_right = 410.0
margin_bottom = 180.0
icon = ExtResource( 20 )

[node name="hard_difficulty" parent="interface/main_menu/grid" instance=ExtResource( 13 )]
margin_left = 460.0
margin_right = 640.0
margin_bottom = 180.0
icon = ExtResource( 21 )

[node name="small_size" parent="interface/main_menu/grid" instance=ExtResource( 13 )]
margin_top = 230.0
margin_right = 180.0
margin_bottom = 410.0
icon = ExtResource( 22 )

[node name="medium_size" parent="interface/main_menu/grid" instance=ExtResource( 13 )]
margin_left = 230.0
margin_top = 230.0
margin_right = 410.0
margin_bottom = 410.0
icon = ExtResource( 23 )

[node name="large_size" parent="interface/main_menu/grid" instance=ExtResource( 13 )]
margin_left = 460.0
margin_top = 230.0
margin_right = 640.0
margin_bottom = 410.0
icon = ExtResource( 24 )

[node name="tween" type="Tween" parent="."]
pause_mode = 2

[node name="dead_timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="world/snake/update_timer" to="world/snake" method="_on_update_timer_timeout"]
[connection signal="pressed" from="interface/touch_interface/up" to="interface/touch_interface" method="_on_up_pressed"]
[connection signal="pressed" from="interface/touch_interface/down" to="interface/touch_interface" method="_on_down_pressed"]
[connection signal="pressed" from="interface/touch_interface/left" to="interface/touch_interface" method="_on_left_pressed"]
[connection signal="pressed" from="interface/touch_interface/right" to="interface/touch_interface" method="_on_right_pressed"]
[connection signal="pressed" from="interface/pause_menu/margin/separator/pause" to="interface/pause_menu" method="_on_pause_pressed"]
[connection signal="pressed" from="interface/pause_menu/margin/separator/restart" to="interface/pause_menu" method="_on_restart_pressed"]
[connection signal="pressed" from="interface/pause_menu/margin/separator/playmenu" to="interface/pause_menu" method="_on_playmenu_pressed"]
[connection signal="pressed" from="interface/pause_menu/margin/separator/quit" to="interface/pause_menu" method="_on_quit_pressed"]
[connection signal="pressed" from="interface/main_menu/grid/easy_difficulty" to="interface/main_menu" method="_on_easy_difficulty_pressed"]
[connection signal="pressed" from="interface/main_menu/grid/medium_difficulty" to="interface/main_menu" method="_on_medium_difficulty_pressed"]
[connection signal="pressed" from="interface/main_menu/grid/hard_difficulty" to="interface/main_menu" method="_on_hard_difficulty_pressed"]
[connection signal="pressed" from="interface/main_menu/grid/small_size" to="interface/main_menu" method="_on_small_size_pressed"]
[connection signal="pressed" from="interface/main_menu/grid/medium_size" to="interface/main_menu" method="_on_medium_size_pressed"]
[connection signal="pressed" from="interface/main_menu/grid/large_size" to="interface/main_menu" method="_on_large_size_pressed"]
[connection signal="timeout" from="dead_timer" to="." method="_on_dead_timer_timeout"]
